--- a/src/classes/LineItemTriggerHandler.cls
+++ b/src/classes/LineItemTriggerHandler.cls
@@ -8,6 +8,8 @@ public with sharing class LineItemTriggerHandler {
 		Logic is fully bulkified. */		
 	public static void handle(List<Line_Item__c> items) {
 		
+		List<Order__c> orders22b = [SELECT Purchased__c,Product_Category_1__c,Product_Category_Units_1__c,Product_Category_2__c,Product_Category_Units_2__c FROM Order__c];
+		
 		// collect related orders
 		Set<Id> orderIds = new Set<Id>();
 		for (Line_Item__c i : items) {
