--- a/src/classes/LineItemTriggerHandler.cls
+++ b/src/classes/LineItemTriggerHandler.cls
@@ -60,7 +60,7 @@ public with sharing class LineItemTriggerHandler {
 	
 	// Sortable wrapper for product categories
 	@TestVisible
-	private with sharing class CategoryWrapper implements Comparable {
+	private class CategoryWrapper implements Comparable {
 		public String name {get;set;}
 		public Decimal units {get;set;}
 		
